tests/snapshots/conformance__n_array_comma_and_number.json.snap
---
source: tests/conformance.rs
expression: "format_output_snapshot(&case.text, &annotated)"
---
case --- 
[,1]
stdout --- 
<empty>
stderr --- 
error: expected entry or closed delimiter `]`, found `,`
 --> stdin:1:2
  |
1 | [,1]
  | -^
  | |
  | expected due to `[`
