tests/snapshots/conformance__n_array_extra_close.json.snap
---
source: tests/conformance.rs
expression: "format_output_snapshot(&case.text, &annotated)"
---
case --- 
["x"]]
stdout --- 
<empty>
stderr --- 
error: unexpected token `]` after json finished
 --> stdin:1:6
  |
1 | ["x"]]
  |      ^
  |
help: consider removing the trailing content (starting with `]`)
  |
1 - ["x"]]
1 + ["x"]
  |
