tests/snapshots/conformance__n_array_just_minus.json.snap
---
source: tests/conformance.rs
expression: "format_output_snapshot(&case.text, &annotated)"
---
case --- 
[-]
stdout --- 
<empty>
stderr --- 
error: expected digit following minus sign, found `]`
 --> stdin:1:2
  |
1 | [-]
  |  ^
  |  |
  |  minus sign found here
