tests/snapshots/conformance__n_array_number_and_several_commas.json.snap
---
source: tests/conformance.rs
expression: "format_output_snapshot(&case.text, &annotated)"
---
case --- 
[1,,]
stdout --- 
<empty>
stderr --- 
error: expected json value, found `,`
 --> stdin:1:4
  |
1 | [1,,]
  |   -^
  |   |
  |   expected due to `,`
