tests/snapshots/conformance__n_array_unclosed_trailing_comma.json.snap
---
source: tests/conformance.rs
expression: "format_output_snapshot(&case.text, &annotated)"
---
case --- 
[1,
stdout --- 
<empty>
stderr --- 
error: expected json value, found no significant characters
 --> stdin:1:3
  |
1 | [1,
  |   ^
  |   |
  |   expected due to `,`
  |
help: insert a placeholder value
  |
1 | [1, "rust is a must"
  |     ++++++++++++++++
