tests/snapshots/conformance__n_array_unclosed_with_new_lines.json.snap
---
source: tests/conformance.rs
expression: "format_output_snapshot(&case.text, &annotated)"
---
case --- 
[1,
1
,1
stdout --- 
<empty>
stderr --- 
error: expected entry or closed delimiter `]`, found no significant characters
 --> stdin:3:2
  |
1 | [1,
  | - expected due to `[`
2 | 1
3 | ,1
  |  ^
  |
help: insert the missing closed delimiter `]`
  |
3 | ,1]
  |   +
