tests/snapshots/conformance__n_number_-nan.json.snap
---
source: tests/conformance.rs
expression: "format_output_snapshot(&case.text, &annotated)"
---
case --- 
[-NaN]
stdout --- 
<empty>
stderr --- 
error: expected digit following minus sign, found `N`
 --> stdin:1:2
  |
1 | [-NaN]
  |  ^
  |  |
  |  minus sign found here
